{
  "version": 4,
  "terraform_version": "1.9.6",
  "serial": 120,
  "lineage": "b74f0eb9-a4f7-5037-e307-2465a3daebcf",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "medusa_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:841162667281:internet-gateway/igw-03f174871968e6769",
            "id": "igw-03f174871968e6769",
            "owner_id": "841162667281",
            "tags": {
              "Name": "medusa-igw"
            },
            "tags_all": {
              "Name": "medusa-igw"
            },
            "vpc_id": "vpc-0556425aa9e7d1af1"
          },
          "dependencies": [
            "aws_vpc.medusa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "medusa_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:841162667281:route-table/rtb-0b404c435412f6aa4",
            "id": "rtb-0b404c435412f6aa4",
            "owner_id": "841162667281",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03f174871968e6769",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "medusa-route-table"
            },
            "tags_all": {
              "Name": "medusa-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0556425aa9e7d1af1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.medusa_igw",
            "aws_vpc.medusa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "medusa_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ea14a0079414580a",
            "route_table_id": "rtb-0b404c435412f6aa4",
            "subnet_id": "subnet-0a91e02d6e0feed88"
          },
          "dependencies": [
            "aws_internet_gateway.medusa_igw",
            "aws_route_table.medusa_rt",
            "aws_subnet.medusa_subnet",
            "aws_vpc.medusa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "medusa_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:841162667281:security-group/sg-02b18cdaf4e91cffa",
            "description": "Allow traffic for Medusa application",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02b18cdaf4e91cffa",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9000
              }
            ],
            "name": "medusa-security-group",
            "name_prefix": "",
            "owner_id": "841162667281",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "medusa-sg"
            },
            "tags_all": {
              "Name": "medusa-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0556425aa9e7d1af1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.medusa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "medusa_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:841162667281:subnet/subnet-0a91e02d6e0feed88",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a91e02d6e0feed88",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "841162667281",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "medusa-subnet"
            },
            "tags_all": {
              "Name": "medusa-subnet"
            },
            "vpc_id": "vpc-0556425aa9e7d1af1"
          },
          "dependencies": [
            "aws_vpc.medusa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "medusa_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:841162667281:vpc/vpc-0556425aa9e7d1af1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0846cf0e2a66e52ce",
            "default_route_table_id": "rtb-0ef79398dbe64d582",
            "default_security_group_id": "sg-0ca71fb96d28f0e9c",
            "dhcp_options_id": "dopt-00bca3a4f37ebd67c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0556425aa9e7d1af1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ef79398dbe64d582",
            "owner_id": "841162667281",
            "tags": {
              "Name": "medusa-vpc"
            },
            "tags_all": {
              "Name": "medusa-vpc"
            }
          }
        }
      ]
    }
  ]
}